# bardak-plus

./: .gitignore  .gitmodules  .podman-play  Cargo.toml  README.md  build.rs  compose.yml  diagram.sh  init.sh  init.sql  run.sh  test.sql
.sqlx/: query-58afbfda52afbdec035f89a38418f754875bc4490f45f67085100730be015547.json  query-76ae187845930d7b701c418b6201880596733f4f23abd9d3c8a2b0530ccc4d65.json
migrations/: 0001_init.sql  0002_thumbs.sql
scripts/: break_db.sh  clean.sh  lib.sh  watch-thumb-db.sh
src/: api.rs  app.rs  config.rs  db.rs  filters.rs  handlers.rs  main.rs  media.rs  schema.rs  state.rs  tasks.rs
static/: index.html
