[package]
name = "bardak-plus"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "chrono" ] }
chrono = "0.4"
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"  # for warp logging
tracing-subscriber = "0.3"  # for warp logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
conf = "0.4.5"
#sqlx-cli = "0.8.6"
