[package]
name = "bardak-plus"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "chrono" ] }
chrono = "0.4"
#warp = { version = "0.4.2", features = ["server"] }
#tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"  # for warp logging
tracing-subscriber = "0.3"  # for warp logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
conf = "0.4.5"
itertools = "0.14.0"
poem = "3.0.1"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
include_dir = "0.7.4"
const_format = "0.2.35"
#sqlx-cli = "0.8.6"

#[profile.release-static]
#inherits = "release"
#rustflags = [
#	"-C", "linker=ld.lld",
#	"-C", "relocation-model=static",
#	#"-C", "strip=symbols"
#	]

[build-dependencies]
tar = "0.4"
flate2 = "1"
walkdir = "2"
ignore = "0.4"

